internal-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: myapp-internal-service
spec:
  selector:
    app: myapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
